Alterações realizados dia 09/04

--- a/index.html
+++ b/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MagnaTech</title>
+  <link rel="stylesheet" href="layout.css">
 </head>
+
 <body>
-<div class="header">
-    <div class="container">
-        <a href="#" class="nav-title">
-            <img src="imgs/Logo-magna.png" width="50px" class="Logo-magna" onclick="direcionar()
-                ">
-                Magnatech 
-        </a>
+  <body>
+    <div class="header">
+        <div class="container">
+            <a class="icone-logo" href="index.html">
+                <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
+                Magnatech
+            </a>
             <ul class="navbar">
-                <li><a class="nav-item">home</a></li>
-                <li><a class="nav-item">Sobre nós</a></li>
-                <li><a class="nav-item" href="login.html">Login</a></li>
-                <li><a class="nav-item">Cadastro</a></li>
-                <li><a class="nav-item" href="cadastro.html">Cadastro</a></li>
-
+                <li><a class="nav-item" href="index.html">Home</a></li>
+                <li><a class="nav-item">Sobre Nós</a></li>
+                <li><a class="nav-item">Login</a></li>
+                <li><a class="nav-item" href="cadastro.html" >Cadastro</a></li>
+                <li><a class="nav-item">Suporte</a></li>
             </ul>
+        </div>
+    </div>
+  <!--Termino Header-->
 
-    </div><!-- final container -->
 
-</dqiv> <!-- final header -->
-    
+  <!-- Início Banner-->
+
+  <div class="banner">
+    <div class="container">
+      <div class="card">
+        <p>
+        somos uma empresa seria e dedicada aos cogumelos
+      </p></div>
+    </div>
+  </div>
+
+  <!-- Fim Banner -->
+
+
+  <!--Inicio Rodape-->
+
+  <div class="baseboard">
+    <div class="container">
+      <div class="info">
+      </div>
+    </div>
+  </div>
+
 </body>
+
 </html>
