--- a/login.html
+++ b/login.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magnatech Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="layout.css">
 </head>
 
 <body>
     <div class="header">
         <div class="container">
-            <a class="nav-title" href="index.html">
+            <a class="icone-logo" href="index.html">
                 <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
                 Magnatech
             </a>
