--- a/cadastro.html
+++ b/cadastro.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acquatec Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="layout.css">
 </head>
 
 <body>
     <div class="header">
         <div class="container">
-            <a class="nav-title" href="index.html">
-                <img src="imgs/Logo-magna.png" width="50px" class="Logo-magna" onclick="direcionar()">
+            <a class="icone-logo" href="index.html">
+                <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" onclick="direcionar()">
                 Magnatech
             </a>
             <ul class="navbar">
