--- a/index.html
+++ b/index.html
@@ -7,51 +7,60 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MagnaTech</title>
-  <link rel="stylesheet" href="layout.css">
+  <link rel="stylesheet" href="Estilo/layout.css">
 </head>
 
 <body>
-  <body>
-    <div class="header">
-        <div class="container">
-            <a class="icone-logo" href="index.html">
-                <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
-                Magnatech
-            </a>
-            <ul class="navbar">
-                <li><a class="nav-item" href="index.html">Home</a></li>
-                <li><a class="nav-item">Sobre Nós</a></li>
-                <li><a class="nav-item">Login</a></li>
-                <li><a class="nav-item" href="cadastro.html" >Cadastro</a></li>
-                <li><a class="nav-item">Suporte</a></li>
-            </ul>
-        </div>
-    </div>
-  <!--Termino Header-->
-
-
-  <!-- Início Banner-->
-
-  <div class="banner">
+ 
+  <div class="header">
     <div class="container">
-      <div class="card">
-        <p>
-        somos uma empresa seria e dedicada aos cogumelos
-      </p></div>
-    </div>
-  </div>
+      <a class="icone-logo" href="index.html">
+        <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
+        Magnatech
+    </a>
+    
+      <ul class="navbar">
+        <li> <a href="">Sobre nós</a> </li>
+        <li> <a href="">Parceiros</a> </li>
+        <li> <a href="">Trabalhe Conosco</a> </li>
+        <li> <a href="">Suporte</a></li>
+      </ul>
+      <button class="botao" href="calculadora.html" >Simulador Financeiro</button>
 
-  <!-- Fim Banner -->
-
-
-  <!--Inicio Rodape-->
-
-  <div class="baseboard">
-    <div class="container">
-      <div class="info">
+      <div class="login">
+        <ul class="usuario">
+          <li> <a href="login.html">Login</a>  &nbsp; |</li>
+          <li> <a href="cadastro.html">Cadastro</a> </li>
+        </ul>
       </div>
     </div>
-  </div>
+s
+    <!--Termino Header-->
+
+
+    <!-- Início Banner-->
+
+    <div class="banner">
+      <div class="container">
+        <div class="card">
+          <p>
+            somos uma empresa seria e dedicada aos cogumelos
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Fim Banner -->
+
+
+    <!--Inicio Rodape-->
+
+    <div class="baseboard">
+      <div class="container">
+        <div class="info">
+        </div>
+      </div>
+    </div>
 
 </body>
 
