--- a/login.html
+++ b/login.html
@@ -6,36 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magnatech Login</title>
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="Estilo/layout.css">
 </head>
-
-<body>
-    <div class="header">
-        <div class="container">
+    <body>
+ 
+        <div class="header">
+          <div class="container">
             <a class="icone-logo" href="index.html">
-                <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
-                Magnatech
-            </a>
+              <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
+              Magnatech
+          </a>
+          
             <ul class="navbar">
-                <li><a class="nav-item" href="index.html">Home</a></li>
-                <li><a class="nav-item">Sobre Nós</a></li>
-                <li><a class="nav-item">Login</a></li>
-                <li><a class="nav-item" href="cadastro.html" >Cadastro</a></li>
-                <li><a class="nav-item">Suporte</a></li>
+              <li> <a href="">Sobre nós</a> </li>
+              <li> <a href="">Parceiros</a> </li>
+              <li> <a href="">Trabalhe Conosco</a> </li>
+              <li> <a href="">Suporte</a></li>
             </ul>
-        </div>
-    </div>
-
-    <div class="banner">
-        <div class="container">
-            <div class="card">
-                <h1>Olá, bem vindo!</h1>
-                <h4>Email</h4> <input type="text" id="in_email" placeholder="Email">
-                <h4>Senha</h4> <input type="password" id="in_password" placeholder="Senha">
-                <button class="btn" onclick="funcao()">Entrar</button>
+            <button class="botao" href="calculadora.html" >Simulador Financeiro</button>
+      
+            <div class="login">
+              <ul class="usuario">
+                <li> <a href="login.html">Login</a>  &nbsp; |</li>
+                <li> <a href="cadastro.html">Cadastro</a> </li>
+              </ul>
             </div>
-        </div>
-    </div>
+          </div>
 </body>
 
 </html>
