--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     </a>
     
       <ul class="navbar">
+        <li> <a href="index.html">Home</a> </li>
         <li> <a href="">Sobre nós</a> </li>
         <li> <a href="">Parceiros</a> </li>
         <li> <a href="">Trabalhe Conosco</a> </li>
         <li> <a href="">Suporte</a></li>
       </ul>
-      <button class="botao" href="calculadora.html" >Simulador Financeiro</button>
+      <button class="botao"><a href="calculadora.html">Simulador Financeiro</a> </button>
 
       <div class="login">
         <ul class="usuario">
@@ -34,7 +35,7 @@
         </ul>
       </div>
     </div>
-s
+
     <!--Termino Header-->
 
 
