--- a/login.html
+++ b/login.html
@@ -2,36 +2,55 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magnatech Login</title>
-    <link rel="stylesheet" href="Estilo/layout.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Magnatech Login</title>
+  <link rel="stylesheet" href="Estilo/layout.css">
 </head>
-    <body>
- 
-        <div class="header">
-          <div class="container">
-            <a class="icone-logo" href="index.html">
-              <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
-              Magnatech
-          </a>
-          
-            <ul class="navbar">
-              <li> <a href="">Sobre nós</a> </li>
-              <li> <a href="">Parceiros</a> </li>
-              <li> <a href="">Trabalhe Conosco</a> </li>
-              <li> <a href="">Suporte</a></li>
-            </ul>
-            <button class="botao" href="calculadora.html" >Simulador Financeiro</button>
-      
-            <div class="login">
-              <ul class="usuario">
-                <li> <a href="login.html">Login</a>  &nbsp; |</li>
-                <li> <a href="cadastro.html">Cadastro</a> </li>
-              </ul>
-            </div>
-          </div>
+
+<body>
+
+  <div class="header">
+    <div class="container">
+      <a class="icone-logo" href="index.html">
+        <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
+        Magnatech
+      </a>
+
+      <ul class="navbar">
+        <li> <a href="index.html">Home</a> </li>
+        <li> <a href="">Sobre nós</a> </li>
+        <li> <a href="">Parceiros</a> </li>
+        <li> <a href="">Trabalhe Conosco</a> </li>
+        <li> <a href="">Suporte</a></li>
+      </ul>
+      <button class="botao"><a href="calculadora.html">Simulador Financeiro</a> </button>
+
+      <div class="login">
+        <ul class="usuario">
+          <li> <a href="login.html">Login</a> &nbsp; |</li>
+          <li> <a href="cadastro.html">Cadastro</a> </li>
+        </ul>
+      </div>
+    </div>
+  <!-- termino do header -->
+
+  <!-- começo do banner -->
+  <div class="banner">
+    <div class="container">
+      <div class="card">
+        <p>
+          <h2>Magnatech</h2>
+                <h4>Login</h4> <input type="text" id="in_login" placeholder="Insira um Login válido">
+                <h4>Senha</h4> <input type="password" id="in_password" placeholder="Insira uma Senha">
+                <button class="btn" onclick="funcao()">Entrar</button>
+        </p>
+      </div>
+    </div>
+  </div>
+
+
 </body>
 
 </html>
