--- a/cadastro.html
+++ b/cadastro.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acquatec Login</title>
-  <link rel="stylesheet" href="Estilo/layout.css">
+  <link rel="stylesheet" href="estiloCSS/layout.css">
 </head>
 
 <body>
