--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     </a>
     
       <ul class="navbar">
-        <li> <a href="index.html">Home</a> </li>
-        <li> <a href="">Sobre nós</a> </li>
-        <li> <a href="">Parceiros</a> </li>
-        <li> <a href="">Trabalhe Conosco</a> </li>
-        <li> <a href="">Suporte</a></li>
+        <li class="itens"> <a class="nav-itens" href="index.html">Home</a> </li>
+        <li> <a class="nav-itens" href="">Sobre nós</a> </li>
+        <li> <a class="nav-itens" href="">Parceiros</a> </li>
+        <li> <a class="nav-itens" href="">Trabalhe Conosco</a> </li>
+        <li> <a class="nav-itens" href="">Suporte</a></li>
       </ul>
-      <button class="botao"><a href="calculadora.html">Simulador Financeiro</a> </button>
+      <button class="botao"><a class="btn" href="calculadora.html">Simulador Financeiro</a> </button>
 
       <div class="login">
         <ul class="usuario">
-          <li> <a href="login.html">Login</a>  &nbsp; |</li>
-          <li> <a href="cadastro.html">Cadastro</a> </li>
+          <li> <a class="nav-itens" href="login.html">Login</a>  &nbsp; |</li>
+          <li> <a class="nav-itens" href="cadastro.html">Cadastro</a> </li>
         </ul>
       </div>
     </div>
