Gabriel Felipe Modificacoes 25/04/2022

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </a>
     
       <ul class="navbar">
-        <li class="itens"> <a class="nav-itens" href="index.html">Home</a> </li>
+        <li class="itens"> <a class="nav-itens" href="index.html">Inicio</a> </li>
         <li> <a class="nav-itens" href="">Sobre nós</a> </li>
         <li> <a class="nav-itens" href="">Parceiros</a> </li>
         <li> <a class="nav-itens" href="">Trabalhe Conosco</a> </li>
@@ -30,7 +30,7 @@
 
       <div class="login">
         <ul class="usuario">
-          <li> <a class="nav-itens" href="login.html">Login</a>  &nbsp; |</li>
+          <li> <a class="nav-itens" href="login.html">Login</a></li> |
           <li> <a class="nav-itens" href="cadastro.html">Cadastro</a> </li>
         </ul>
       </div>
