Gabriel Felipe Correcoes 26/04/2022

--- a/index.html
+++ b/index.html
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MagnaTech</title>
-  <link rel="stylesheet" href="estiloCSS/layout.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>MagnaTech</title>
+	<link rel="stylesheet" href="estiloCSS/layout.css">
 </head>
 
 <body>
- 
-  <div class="header">
-    <div class="container">
-      <a class="icone-logo" href="index.html">
-        <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
-        Magnatech
-    </a>
-    
-      <ul class="navbar">
-        <li class="itens"> <a class="nav-itens" href="index.html">Inicio</a> </li>
-        <li> <a class="nav-itens" href="">Sobre nós</a> </li>
-        <li> <a class="nav-itens" href="">Parceiros</a> </li>
-        <li> <a class="nav-itens" href="">Trabalhe Conosco</a> </li>
-        <li> <a class="nav-itens" href="">Suporte</a></li>
-      </ul>
-      <button class="botao"><a class="btn" href="calculadora.html">Simulador Financeiro</a> </button>
 
-      <div class="login">
-        <ul class="usuario">
-          <li> <a class="nav-itens" href="login.html">Login</a></li> |
-          <li> <a class="nav-itens" href="cadastro.html">Cadastro</a> </li>
-        </ul>
-      </div>
-    </div>
+	<div class="header">
+		<div class="container">
+			<a class="icone-logo" href="index.html">
+				<img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
+				Magnatech
+			</a>
 
-    <!--Termino Header-->
+			<ul class="navbar">
+				<li><a class="nav-itens" href="index.html">Inicio</a></li>
+				<li><a class="nav-itens" href="">Sobre nós</a></li>
+				<li><a class="nav-itens" href="">Parceiros</a></li>
+				<li><a class="nav-itens" href="">Trabalhe Conosco</a></li>
+				<li><a class="nav-itens" href="">Suporte</a></li>
+			</ul>
+			<a class="btn" href="calculadora.html"><button class="botao">Simulador Financeiro</button></a>
 
+			<div class="login">
+				<ul class="usuario">
+					<li> <a class="nav-itens" href="login.html">Login</a></li> |
+					<li> <a class="nav-itens" href="cadastro.html">Cadastro</a> </li>
+				</ul>
+			</div>
+		</div>
+	</div>
 
-    <!-- Início Banner-->
-
-    <div class="banner">
-      <div class="container">
-        <div class="card">
-          <p>
-            somos uma empresa seria e dedicada aos cogumelos
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Fim Banner -->
+	<!--Termino Header-->
 
 
-    <!--Inicio Rodape-->
+	<!-- Início Banner-->
 
-    <div class="baseboard">
-      <div class="container">
-        <div class="info">
-        </div>
-      </div>
-    </div>
+	<div class="banner">
+		<div class="container">
+			<div class="card">
+				<p>
+					somos uma empresa seria e dedicada aos cogumelos
+				</p>
+			</div>
+		</div>
+	</div>
+
+	<!-- Fim Banner -->
+
+
+	<!--Inicio Rodape-->
+
+	<div class="baseboard">
+		<div class="container">
+			<div class="info">
+			</div>
+		</div>
+	</div>
 
 </body>
 
