--- a/calculadora.html
+++ b/calculadora.html
@@ -5,140 +5,138 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estiloCSS/layout.css">
     <title>Simulador Financeiro</title>
+    <link rel="stylesheet" href="estiloCSS/layout.css">
 </head>
 
 <body>
 
-    <body>
+    <div class="header">
+        <div class="container">
+            <a class="icone-logo" href="index.html">
+                <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
+                Magnatech
+            </a>
 
-        <div class="header">
-            <div class="container">
-                <a class="icone-logo" href="index.html">
-                    <img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
-                    Magnatech
-                </a>
+            <ul class="navbar">
+                <li><a class="nav-itens" href="index.html">Inicio</a></li>
+				<li><a class="nav-itens" href="">Sobre nós</a></li>
+				<li><a class="nav-itens" href="">Parceiros</a></li>
+				<li><a class="nav-itens" href="">Trabalhe Conosco</a></li>
+				<li><a class="nav-itens" href="">Suporte</a></li>
+            </ul>
+            <a class="btn" href="calculadora.html"><button class="botao">Simulador Financeiro</button></a>
 
-                <ul class="navbar">
-                    <li> <a class="nav-itens" href="index.html">Home</a> </li>
-                    <li> <a class="nav-itens" href="">Sobre nós</a> </li>
-                    <li> <a class="nav-itens" href="">Parceiros</a> </li>
-                    <li> <a class="nav-itens" href="">Trabalhe Conosco</a> </li>
-                    <li> <a class="nav-itens" href="">Suporte</a></li>
+            <div class="login">
+                <ul class="usuario">
+                    <li> <a class="nav-itens" href="login.html">Login</a></li> |
+                    <li> <a class="nav-itens" href="cadastro.html">Cadastro</a> </li>
                 </ul>
-                <button class="botao" href="calculadora.html">Simulador Financeiro</button>
-
-                <div class="login">
-                    <ul class="usuario">
-                        <li> <a class="nav-itens" href="login.html">Login</a> &nbsp; |</li>
-                        <li> <a class="nav-itens" href="cadastro.html">Cadastro</a> </li>
-                    </ul>
-                </div>
             </div>
-            <div class="banner">
-                <div class="container">
-                    <div class="calculadora1">
-                        <h2>CALCULADORA FINANCEIRA</h2>
+        </div>
+    </div>
 
-                        <p>Segundo dados da ONU Verde, no Brasil, cerca de 10% do desperdício de alimentos ocorre logo
-                            durante sua produção e colheita, desperdício este que, <br>
-                            segundo os Objetivos de Desenvolvimento Sustentável (ODS) da ONU deve ser reduzido pela
-                            metade até 2030. </p>
+    <div class="banner">
+        <div class="container">
+            <div class="calculadora1">
+                <h2>CALCULADORA FINANCEIRA</h2>
 
-                        <p>Embora já seja comum o uso de sensores para o monitoramento de produtos armazenados, nós da
-                            MagnaTech enxergamos que o monitoramento das condições <br>
-                            do ambiente durante o período de crescimento da planta também é de extrema importância,
-                            visto que um crescimento mais saudável da planta auxiliaria <br>
-                            consideravelmente em sua vida útil e potencial nutritivo. </p>
+                <p>Segundo dados da ONU Verde, no Brasil, cerca de 10% do desperdício de alimentos ocorre logo
+                    durante sua produção e colheita, desperdício este que, <br>
+                    segundo os Objetivos de Desenvolvimento Sustentável (ODS) da ONU deve ser reduzido pela
+                    metade até 2030. </p>
 
-                        <p>Considerando esses dois pontos e buscando facilitar a visualização dos mesmos, nós
-                            disponibilizamos um simulador que mostra o desperdício atual da colheita <br>
-                            e o quanto este desperdício pode ser reduzido com o uso de nossos sensores de monitoramento
-                            e um sistema de controle de temperatura e umidade integrado a eles. </p>
-                    </div>
-                    <div class="calculadora">
+                <p>Embora já seja comum o uso de sensores para o monitoramento de produtos armazenados, nós da
+                    MagnaTech enxergamos que o monitoramento das condições <br>
+                    do ambiente durante o período de crescimento da planta também é de extrema importância,
+                    visto que um crescimento mais saudável da planta auxiliaria <br>
+                    consideravelmente em sua vida útil e potencial nutritivo. </p>
 
-                        <p>
-                            Informe a unidade de medida utilizada:
-                            <select id="sel_medida" onchange="escolheMedida()">
-                                <option value="1">Quilogramas (1kg)</option>
-                                <option value="15">Arrobas (15kg)</option>
-                                <option value="60">Sacas (60kg)</option>
-                                <option value="1000">Toneladas (1000kg)</option>
-                            </select>
-                        </p>
-
-                        <p>
-                            Informe a quantidade média produzida por mês (considerando também o que é descartado): <br>
-                            <input placeholder="Quilogramas produzidos" id="in_producao">
-                        </p>
-
-                        <p>
-                            Informe o valor médio por mês que é obtido pela empresa, em reais: <br>
-                            <input placeholder="Venda" id="in_venda">
-                        </p>
-
-                        <p>
-                            Informe a quantidade perdida durante o plantio (em %): <br>
-                            <input placeholder="Desperdício" id="in_desperdicio">
-                        </p>
-
-                        <button onclick="resultado()">Ver resultado</button>
-
-                        <div id="div_desperdicio" style="display: none;">
-
-                            <p>Seu desperdício médio mensal é de <b id="b_desperdicio_venda"></b> e, com isso, sua
-                                empresa <br>
-                                acaba perdendo cerca de <b id="b_desperdicio_dinheiro"></b> dos <b
-                                    id="b_total_dinheiro"></b> que poderia lucrar.</p>
-
-                            <p style="font-weight: bold;">Agora calcule como seria com um monitoramento em sua
-                                plantação:</p>
-
-                            <p>
-                                Informe o tamanho da área de plantio, em m²: <br>
-                                <input placeholder="Área" id="in_area">
-                            </p>
-
-                            <button onclick="calculo()">Calcular</button>
-
-                        </div>
-                        <div id="div_calculo" style="display: none;">
-
-                            <p>
-                                Ao aderir à um sistema de monitoramento adequado, haveria um diminuição de cerca de <b
-                                    id="b_taxa_economia"></b> na taxa de alimentos desperdiçados, <br>
-                                gerando <b id="b_lucro_total"></b>, um aumento de <b id="b_lucro_parcial"></b> quando
-                                comparado ao valor atual das vendas
-                            </p>
-                            <p>
-                                Tudo isso sendo necessária apenas a instalação de <b id="b_sensores"></b> sensores,
-                                trazendo um custo de apenas <b id="b_sensores_custo"></b> de equipamentos para o
-                                monitoramento <br>
-                                da temperatura e umidade.
-                            </p>
-
-                        </div>
-
-                    </div>
-
-                </div>
+                <p>Considerando esses dois pontos e buscando facilitar a visualização dos mesmos, nós
+                    disponibilizamos um simulador que mostra o desperdício atual da colheita <br>
+                    e o quanto este desperdício pode ser reduzido com o uso de nossos sensores de monitoramento
+                    e um sistema de controle de temperatura e umidade integrado a eles. </p>
             </div>
-            <!--Inicio Rodape-->
-            <div class="baseboard">
-                <div class="container">
-                    <div class="info">
-                        <p>
-                            alguma coisa
-                        </p>
-                    </div>
+            <div class="calculadora">
+
+                <p>
+                    Informe a unidade de medida utilizada:
+                    <select id="sel_medida" onchange="escolheMedida()">
+                        <option value="1">Quilogramas (1kg)</option>
+                        <option value="15">Arrobas (15kg)</option>
+                        <option value="60">Sacas (60kg)</option>
+                        <option value="1000">Toneladas (1000kg)</option>
+                    </select>
+                </p>
+
+                <p>
+                    Informe a quantidade média produzida por mês (considerando também o que é descartado): <br>
+                    <input placeholder="Quilogramas produzidos" id="in_producao">
+                </p>
+
+                <p>
+                    Informe o valor médio por mês que é obtido pela empresa, em reais: <br>
+                    <input placeholder="Venda" id="in_venda">
+                </p>
+
+                <p>
+                    Informe a quantidade perdida durante o plantio (em %): <br>
+                    <input placeholder="Desperdício" id="in_desperdicio">
+                </p>
+
+                <button onclick="resultado()">Ver resultado</button>
+
+                <div id="div_desperdicio" style="display: none;">
+
+                    <p>Seu desperdício médio mensal é de <b id="b_desperdicio_venda"></b> e, com isso, sua
+                        empresa <br>
+                        acaba perdendo cerca de <b id="b_desperdicio_dinheiro"></b> dos <b
+                            id="b_total_dinheiro"></b> que poderia lucrar.</p>
+
+                    <p style="font-weight: bold;">Agora calcule como seria com um monitoramento em sua
+                        plantação:</p>
+
+                    <p>
+                        Informe o tamanho da área de plantio, em m²: <br>
+                        <input placeholder="Área" id="in_area">
+                    </p>
+
+                    <button onclick="calculo()">Calcular</button>
+
                 </div>
+                <div id="div_calculo" style="display: none;">
+
+                    <p>
+                        Ao aderir à um sistema de monitoramento adequado, haveria um diminuição de cerca de <b
+                            id="b_taxa_economia"></b> na taxa de alimentos desperdiçados, <br>
+                        gerando <b id="b_lucro_total"></b>, um aumento de <b id="b_lucro_parcial"></b> quando
+                        comparado ao valor atual das vendas
+                    </p>
+                    <p>
+                        Tudo isso sendo necessária apenas a instalação de <b id="b_sensores"></b> sensores,
+                        trazendo um custo de apenas <b id="b_sensores_custo"></b> de equipamentos para o
+                        monitoramento <br>
+                        da temperatura e umidade.
+                    </p>
+
+                </div>
+
             </div>
 
         </div>
+    </div>
+    <!--Inicio Rodape-->
+    <div class="baseboard">
+        <div class="container">
+            <div class="info">
+                <p>
+                    alguma coisa
+                </p>
+            </div>
+        </div>
+    </div>
 
-    </body>
+</body>
 
 </html>
 
