Gabriel Felipe suporte-beta 27/04/2022

--- a/calculadora.html
+++ b/calculadora.html
@@ -23,9 +23,9 @@
 				<li><a class="nav-itens" href="">Sobre nós</a></li>
 				<li><a class="nav-itens" href="">Parceiros</a></li>
 				<li><a class="nav-itens" href="">Trabalhe Conosco</a></li>
-				<li><a class="nav-itens" href="">Suporte</a></li>
+				<li><a class="nav-itens" href="suporte.html">Suporte</a></li>
             </ul>
-            <a class="btn" href="calculadora.html"><button class="botao">Simulador Financeiro</button></a>
+            <a class="btn" href="calculadora.html"><button class="btn-simulador">Simulador Financeiro</button></a>
 
             <div class="login">
                 <ul class="usuario">
