--- a/suporte.html
+++ b/suporte.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Acquatec Login</title>
+	<title>MagnaTech</title>
 	<link rel="stylesheet" href="estiloCSS/layout.css">
 </head>
 
@@ -35,25 +35,36 @@
 			</div>
 		</div>
 	</div>
-	<!-- termino da header -->
 
-	<!-- começo dp banner -->
+	<!--Termino Header-->
+
+
+	<!-- Início Banner-->
+
 	<div class="banner">
 		<div class="container">
 			<div class="card">
-				<p>
-				<h2>Realize seu cadastro!</h2>
-				<h4>Login</h4> <input type="text" id="in_login" placeholder="Insira um Login válido">
-				<h4>Senha</h4> <input type="password" id="in_password" placeholder="Insira uma Senha">
-				<h4>Email</h4> <input type="email" id="in_email1" placeholder="Insira um Email">
-				<h4>Confirme o Email</h4> <input type="email" id="in_email2" placeholder="Insira um Email">
-
-				<button class="btn" onclick="funcao()">Entrar</button>
-
-				</p>
+				<h2>Magnatech</h2>
+				<h4>Dúvida</h4> <input type="text" id="in_duvida" placeholder="Insira um Login válido">
+				<h4>Descrição</h4> <textarea style="height: 20%; resize: none" id="in_duvida_desc" placeholder="Insira uma Senha"></textarea>
+				<br>
+				<button class="btn">Enviar</button>
 			</div>
 		</div>
 	</div>
+
+	<!-- Fim Banner -->
+
+
+	<!--Inicio Rodape-->
+
+	<div class="baseboard">
+		<div class="container">
+			<div class="info">
+			</div>
+		</div>
+	</div>
+
 </body>
 
 </html>
