--- a/suportenavteste.html
+++ b/suportenavteste.html
@@ -6,33 +6,38 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MagnaTech</title>
-	<link rel="stylesheet" href="estiloCSS/layout.css">
+	<link rel="stylesheet" href="estiloCSS/layoutnavteste.css">
 </head>
 
 <body>
 
 	<div class="header">
 		<div class="container">
-			<a class="icone-logo" href="index.html">
-				<img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
-				Magnatech
-			</a>
-
 			<ul class="navbar">
-				<li><a class="nav-itens" href="index.html">Inicio</a></li>
-				<li><a class="nav-itens" href="">Sobre nós</a></li>
-				<li><a class="nav-itens" href="">Parceiros</a></li>
-				<li><a class="nav-itens" href="">Trabalhe Conosco</a></li>
-				<li><a class="nav-itens" href="suporte.html">Suporte</a></li>
-			</ul>
-			<a class="btn" href="calculadora.html"><button class="btn-simulador">Simulador Financeiro</button></a>
-
-			<div class="login">
-				<ul class="usuario">
+				<div>
+					<li>
+						<a class="icone-logo" href="index.html">
+							<img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
+							Magnatech
+						</a>
+					</li>
+				</div>
+				<div class="nav-box">
+					<li><a class="nav-itens" href="index.html">Inicio</a></li>
+					<li><a class="nav-itens" href="">Sobre nós</a></li>
+					<li><a class="nav-itens" href="">Parceiros</a></li>
+					<li><a class="nav-itens" href="">Trabalhe Conosco</a></li>
+					<li><a class="nav-itens" href="suporte.html">Suporte</a></li>
+				</div>
+				<li><a class="btn" href="calculadora.html"><button class="btn-simulador">Simulador Financeiro</button></a></li>
+				<div class="login">
 					<li> <a class="nav-itens" href="login.html">Login</a></li> |
 					<li> <a class="nav-itens" href="cadastro.html">Cadastro</a> </li>
-				</ul>
-			</div>
+				</div>
+			</ul>
+			
+
+			
 		</div>
 	</div>
 
@@ -45,7 +50,7 @@
 		<div class="container">
 			<div class="card">
 				<p>
-					somos uma empresa seria e dedicada aos cogumelos
+					a
 				</p>
 			</div>
 		</div>
