Gabriel Felipe Header pré-pronto 29/04/2022

--- a/cadastro.html
+++ b/cadastro.html
@@ -25,12 +25,13 @@
 				<li><a class="nav-itens" href="">Trabalhe Conosco</a></li>
 				<li><a class="nav-itens" href="suporte.html">Suporte</a></li>
 			</ul>
-			<a class="btn" href="calculadora.html"><button class="btn-simulador">Simulador Financeiro</button></a>
+			<a class="nav-btn" href="calculadora.html">Simulador Financeiro</a>
 
 			<div class="login">
 				<ul class="usuario">
-					<li> <a class="nav-itens" href="login.html">Login</a></li> |
-					<li> <a class="nav-itens" href="cadastro.html">Cadastro</a> </li>
+					<li> <a class="nav-itens" href="login.html">Login</a></li>
+					|
+					<li> <a class="nav-itens nav-item-ativo" href="cadastro.html">Cadastro</a> </li>
 				</ul>
 			</div>
 		</div>
