--- a/calculadora.html
+++ b/calculadora.html
@@ -25,11 +25,12 @@
 				<li><a class="nav-itens" href="">Trabalhe Conosco</a></li>
 				<li><a class="nav-itens" href="suporte.html">Suporte</a></li>
             </ul>
-            <a class="btn" href="calculadora.html"><button class="btn-simulador">Simulador Financeiro</button></a>
+            <a class="nav-btn nav-btn-ativo" href="calculadora.html">Simulador Financeiro</a>
 
             <div class="login">
                 <ul class="usuario">
-                    <li> <a class="nav-itens" href="login.html">Login</a></li> |
+                    <li> <a class="nav-itens" href="login.html">Login</a></li>
+                    |
                     <li> <a class="nav-itens" href="cadastro.html">Cadastro</a> </li>
                 </ul>
             </div>
