--- a/suporte.html
+++ b/suporte.html
@@ -23,16 +23,17 @@
 				<li><a class="nav-itens" href="">Sobre nós</a></li>
 				<li><a class="nav-itens" href="">Parceiros</a></li>
 				<li><a class="nav-itens" href="">Trabalhe Conosco</a></li>
-				<li><a class="nav-itens" href="suporte.html">Suporte</a></li>
+				<li><a class="nav-itens nav-item-ativo" href="suporte.html">Suporte</a></li>
 			</ul>
-			<a class="btn" href="calculadora.html"><button class="btn-simulador">Simulador Financeiro</button></a>
+			<a class="nav-btn" href="calculadora.html">Simulador Financeiro</a>
 
-			<div class="login">
+			<span class="login">
 				<ul class="usuario">
-					<li> <a class="nav-itens" href="login.html">Login</a></li> |
+					<li> <a class="nav-itens" href="login.html">Login</a></li>
+					|
 					<li> <a class="nav-itens" href="cadastro.html">Cadastro</a> </li>
 				</ul>
-			</div>
+			</span>
 		</div>
 	</div>
 
