--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -50,11 +50,11 @@
 			<div class="card">
 				<div class="dash-header">
 					<div class="btn-dash">
-						<button onclick="shimeji()" class="btn-chart">Shimeji</button>
-						<button onclick="champignon()" class="btn-chart">Champignon</button>
-						<button onclick="trufa()" class="btn-chart">Trufa</button>
-						<button onclick="ostra()" class="btn-chart">Ostra-Rosa</button>
-						<button onclick="shitake()" class="btn-chart">Shitake</button>
+						<img src="imgs/shimeji.png" onclick="shimeji()" class="btn-chart">Shimeji</img src="">
+						<img src="imgs/champignon.png" onclick="champignon()" class="btn-chart">Champignon</img src="">
+						<img src="imgs/trufa-branca.png" onclick="trufa()" class="btn-chart">Trufa</img src="">
+						<img src="imgs/ostra-rosa.png" onclick="ostra()" class="btn-chart">Ostra-Rosa</img src="">
+						<img src="imgs/shitake.png" onclick="shitake()" class="btn-chart">Shitake</img src="">
 					</div>
 					
 					<!-- começo do Shimeji -->
