--- a/dashboard/pasta de test/dashboard.html
+++ b/dashboard/pasta de test/dashboard.html
@@ -5,28 +5,26 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>MagnaTech</title>
+	<title>MagnaTech Dashboard</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 	<script src="http://www.chartjs.org/dist/2.7.1/Chart.js"></script>
 	<script src="http://www.chartjs.org/samples/latest/utils.js"></script>
-	<link rel="stylesheet" href="estiloCSS/layout1.css">
+	<link rel="stylesheet" href="css/layout.css">
 </head>
 
 <body>
 
 	<div class="header">
 		<div class="container">
-			<a class="icone-logo" href="index.html">
-				<img src="imgs/Logo-magna.png" width="70px" class="Logo-magna" href="index.html">
-				Magnatech
+			<a href="index.html">
+                <img src="Untitled.png">
 			</a>
+			
 
 			<ul class="navbar">
-				<li><a class="nav-itens nav-item-ativo" href="index.html">Inicio</a></li>
+				<li><a class="nav-itens" href="index.html">Inicio</a></li>
 				<li><a class="nav-itens" href="">Sobre nós</a></li>
-				<li><a class="nav-itens" href="">Parceiros</a></li>
-				<li><a class="nav-itens" href="">Trabalhe Conosco</a></li>
-				<li><a class="nav-itens" href="suporte.html">Suporte</a></li>
+				<li><a class="nav-itens" href="agendamento.html">Agendamento</a></li>
 			</ul>
 			<a class="nav-btn" href="calculadora.html">Simulador Financeiro</a>
 
@@ -45,9 +43,8 @@
 
 	<!-- Início Banner-->
 
-	<div class="banner">
+	<div class="banner" id="banner-dashboard">
 		<div class="container">
-			<div class="card">
 				<div class="dash-header">
 					<div class="btn-dash">
 						<img src="imgs/shimeji.png" onclick="shimeji()" class="btn-chart">Shimeji 
@@ -61,9 +58,9 @@
 
 					<div id="div_shimeji" style="display:block;">
 						<h1>Shimeji</h1>
-						<div class="div3">
+						<div class="div-dash1">
 
-							<div class="div1">
+							<div class="div-dash2">
 								<section>
 									<div class="grafico">
 										<h3>Sensores</h3>
@@ -98,9 +95,9 @@
 					<!-- começo do Champignon  -->
 					<div id="div_champignon" style="display:none;">
 						<h1>Champignon</h1>
-						<div class="div3">
+						<div class="div-dash1">
 
-							<div class="div1">
+							<div class="div-dash2">
 								<section>
 									<div class="grafico">
 										<h3>Sensores</h3>
@@ -134,8 +131,8 @@
 					<div id="div_trufa" style="display:none;">
 						<h1>Trufa</h1>
 
-						<div class="div3">
-							<div class="div1">
+						<div class="div-dash1">
+							<div class="div-dash2">
 								<section>
 									<div class="grafico">
 										<h3>Sensores</h3>
@@ -168,9 +165,9 @@
 					<!-- começo da Ostra -->
 					<div id="div_ostra" style="display:none;">
 						<h1>Ostra</h1>
-						<div class="div3">
+						<div class="div-dash1">
 
-							<div class="div1">
+							<div class="div-dash2">
 								<section>
 									<div class="grafico">
 										<h3>Sensores</h3>
@@ -203,9 +200,9 @@
 					<div id="div_shitake" style="display:none;">
 						<h1>Shitake</h1>
 						
-						<div class="div3">
+						<div class="div-dash1">
 						
-							<div class="div1">
+							<div class="div-dash2">
 							<section>
 									<div class="grafico">
 										<h3>Sensores</h3>
@@ -239,7 +236,6 @@
 					<!-- final do Shitake -->
 
 				</div>
-			</div>
 		</div>
 	</div>
 
